Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I8e7f00b7837fec028f4c567a5290ec9bca2c2c08

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -354,7 +354,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"حالة الأمان"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"\"قفل الشاشة\" و\"العثور على جهازي\" وأمان التطبيقات"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"الأمان والخصوصية"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"الأذونات وقفل الشاشة وأمان التطبيقات"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"تمت إضافة الوجه"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"انقر لإعداد ميزة \"فتح الجهاز بالتعرف على الوجه\""</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"فتح الجهاز بالتعرف على الوجه"</string>
@@ -602,10 +603,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" تم إيقاف خيار قفل الشاشة. لمعرفة المزيد من المعلومات، اتصل بمشرف مؤسستك. "<annotation id="admin_details">"مزيد من التفاصيل"</annotation>\n\n"ما زال بإمكانك استخدام بصمة إصبعك للسماح بعمليات الشراء والوصول إلى التطبيقات. "<annotation id="url">"مزيد من المعلومات"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ارفع إصبعك ثم المس زر الاستشعار مرة أخرى."</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"لا يمكن استخدام مستشعر بصمات الإصبع. يُرجى التواصل مع مقدِّم خدمات إصلاح."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"الإعدادات المتقدمة"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"‏قفل الملف الشخصي للعمل، Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"‏Smart Lock وغير ذلك"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"الإعدادات المتقدمة"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"يمكنك إضافة ما يصل إلى <xliff:g id="COUNT">%d</xliff:g> بصمات الإصبع"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"لقد أضفت الحد الأقصى لعدد بصمات الإصبع"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"يتعذر إضافة مزيد من بصمات الإصبع"</string>
@@ -2383,7 +2388,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"الصوت"</string>
     <string name="general_category_title" msgid="6298579528716834157">"الإعدادات العامة"</string>
     <string name="display_category_title" msgid="6638191682294461408">"العرض"</string>
-    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"اللون وتصوير الحركة"</string>
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"اللون والصور المتحركة"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"جعل الشاشة أقل سطوعًا"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"عناصر التحكم في التفاعل"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"عناصر التحكّم في التوقيت"</string>
@@ -2392,7 +2397,7 @@
     <string name="experimental_category_title" msgid="898904396646344152">"إعدادات تجريبية"</string>
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"عناصر التحكّم في الميزات"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"إن تطبيق قارئ الشاشة مُصمَّم في الأساس من أجل الأشخاص الكفيفين والذين يعانون من ضعف في النظر."</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"هو قارئ شاشة مُصمَّم في الأساس للأشخاص الذين يعانون فقدان البصر أو ضعفه."</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"يمكنك النقر على بيانات على شاشتك لتتم قراءتها بصوت عالٍ"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"الإعدادات المفضّلة للشرح"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"لمحة عن الإعدادات المفضّلة للشرح"</string>
@@ -2426,7 +2431,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"التكبير باستخدام الاختصار"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"التكبير باستخدام الزر والنقر الثلاثي"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"لمحة عن <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"حجم العرض والنص"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"حجم شاشة العرض والنص"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"تغيير كيفية عرض النص"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"الموضوع: تصميمات منطاد الهواء الساخن"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"مِن: حازم"</string>
@@ -2530,7 +2535,7 @@
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"يمكنك اختيار المدة الزمنية التي يتم خلالها عرض الرسائل المؤقتة التي تطلب منك اتخاذ إجراء."</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"مهلة النقر مع الاستمرار"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"قلب الألوان"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"استخدام قلب الألوان"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"قلب الألوان"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"اختصار قلب الألوان"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"يحوّل خيار \"قلب الألوان\" الشاشات المضيئة إلى شاشات معتمة. ويحوّل أيضًا الشاشات المعتمة إلى شاشات مضيئة."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"‏&lt;b&gt;ملاحظات:&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; ستتغيّر الألوان في الوسائط والصور.&lt;/li&gt; &lt;li&gt; خيار \"قلب الألوان\" يعمل مع جميع التطبيقات.&lt;/li&gt; &lt;li&gt; لعرض خلفية معتمة، يمكنك استخدام \"المظهر الداكن\" بدلاً من ذلك.&lt;/li&gt; &lt;/ol&gt;"</string>
@@ -2577,7 +2582,7 @@
     <string name="accessibility_quick_settings_tooltip_dismiss" msgid="3269120277643884190">"إغلاق"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"يمكنك تعديل كيفية عرض الألوان على هاتفك."</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"يمكنك تعديل كيفية عرض الألوان على جهازك اللوحي."</string>
-    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"استخدام ميزة \"تصحيح الألوان\""</string>
+    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"اختصار تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"لمحة عن تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"تعرّف على مزيد من المعلومات حول تصحيح الألوان"</string>
@@ -2614,7 +2619,7 @@
       <item quantity="one">تم حفظ <xliff:g id="NUMBER_DEVICE_COUNT_0">%1$d</xliff:g> سماعة أذن طبية</item>
     </plurals>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"تعديل الصوت"</string>
-    <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"وصف صوتي"</string>
+    <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"الوصف الصوتي"</string>
     <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"يمكنك الاستماع إلى وصف لما يظهر على الشاشة في الأفلام والعروض التلفزيونية التي تدعم وصف الصوت."</string>
     <string name="keywords_audio_description" msgid="6202816411593281252">"وصف الصوت، صوت، وصف، ضعف في النظر،"</string>
     <string name="accessibility_summary_shortcut_enabled" msgid="4030427268146752644">"الاختصار مفعَّل"</string>
@@ -3580,6 +3585,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"حذف"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"سيتم حذف كل التطبيقات والبيانات في هذه الجلسة."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"إزالة"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"تفعيل المكالمات الهاتفية"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"تفعيل المكالمات الهاتفية والرسائل القصيرة"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"حذف حساب المستخدم"</string>
@@ -4897,7 +4916,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"يمكنك فتح تطبيق الكاميرا من خلال لف رسغك مرتين"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"اضغط على زر التشغيل مرتين لتشغيل الكاميرا"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"فتح الكاميرا سريعًا بدون فتح قفل الشاشة"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"حجم العرض"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"حجم شاشة العرض"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"تكبير كل شيء أو تصغيره"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"عرض، كثافة، شاشة تصغير/تكبير، تغيير الحجم، ضبط الحجم"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"يمكنك تصغير العناصر المعروضة على الشاشة أو تكبيرها. قد يتغيّر موضع بعض التطبيقات على الشاشة."</string>
@@ -5902,12 +5921,11 @@
     <string name="lockscreen_privacy_wallet_summary" msgid="3984851951621168573">"السماح بالوصول إلى المحفظة من شاشة القفل"</string>
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="1856477548806618829">"عرض الماسح الضوئي لرمز الاستجابة السريعة"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="4577409244972250235">"السماح بالوصول إلى الماسح الضوئي لرمز الاستجابة السريعة من شاشة القفل"</string>
-    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"إظهار عناصر التحكّم في الجهاز"</string>
+    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"إظهار عناصر التحكم بالأجهزة"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"إظهار عناصر التحكّم للأجهزة الخارجية من شاشة القفل"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"التحكّم من جهاز مُقفَل"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"يمكنك التحكّم في أجهزة خارجية بدون فتح قفل هاتفك أو جهازك اللوحي إذا كان تطبيق \"أدوات التحكم بالجهاز\" يسمح بذلك."</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"لتتمكَّن من استخدام عناصر التحكّم، عليك أولاً تفعيل خيار \"إظهار عناصر التحكّم بالأجهزة\"."</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"إظهار الساعة بخطين عندما تكون متاحة"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ساعة بخطين"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -6052,8 +6070,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"الوصول إلى الموقع الجغرافي"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"للتطبيقات والخدمات"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"للتطبيقات والخدمات. إذا كان هذا الخيار غير مفعّل، قد تتم مشاركة بيانات الميكروفون عند الاتصال برقم طوارئ."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"إعدادات الألعاب"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"تفعيل \"اختصار لوحة بيانات الألعاب\" والمزيد"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"السابق"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"التالي"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"معاينة اللون"</string>
