--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"সুৰক্ষা স্থিতি"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"স্ক্ৰীন লক, Find My Device, এপৰ সুৰক্ষা"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"সুৰক্ষা আৰু গোপনীয়তা"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"অনুমতি, স্ক্ৰীন ল’ক, এপৰ সুৰক্ষা"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"চেহেৰা যোগ কৰা হ\'ল"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"মুখাৱয়ব ছেট আপ কৰিবলৈ টিপক"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ফেচ আনলক"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" স্ক্ৰীন লক বিকল্পটো অক্ষম হৈ আছে। অধিক জানিবলৈ আপোনাৰ প্ৰতিষ্ঠানৰ প্ৰশাসকৰ সৈতে যোগাযোগ কৰক। "<annotation id="admin_details">"অধিক বিৱৰণ"</annotation>\n\n"আপুনি এতিয়াও ক্ৰয়ৰ আৰু এপৰ এক্সেছৰ অনুমতি দিবলৈ ফিংগাৰপ্ৰিণ্ট ব্যৱহাৰ কৰি থাকিব পাৰে। "<annotation id="url">"অধিক জানক"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"আঙুলিটো আঁতৰাওক আৰু ছেন্সৰটো আকৌ স্পৰ্শ কৰক"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ফিংগাৰপ্ৰিণ্ট ছেন্সৰ ব্যৱহাৰ কৰিব নোৱাৰি। মেৰামতি সেৱা প্ৰদানকাৰী কোনো প্ৰতিষ্ঠানলৈ যাওক"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"উচ্চখাপৰ ছেটিং"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"কৰ্মস্থানৰ প্ৰ’ফাইলৰ লক, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock আৰু বহুতো"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"উচ্চখাপৰ ছেটিং"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপুনি <xliff:g id="COUNT">%d</xliff:g>লৈকে ফিংগাৰপ্ৰিণ্ট যোগ কৰিব পাৰে"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপুনি সৰ্বাধিক সংখ্যক ফিংগাৰপ্ৰিণ্টবোৰ যোগ কৰিছে"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"আৰু অধিক ফিংগাৰপ্ৰিণ্ট যোগ কৰিব নোৱাৰি"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"মচক"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"এই ছেছনৰ আটাইবোৰ এপ্ আৰু ডেটা মচা হ\'ব।"</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"আঁতৰাওক"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"ফ\'ন কল অন কৰক"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"ফ\'ন কল আৰু এছএমএছ অন কৰক"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"ব্যৱহাৰকাৰীজন মচক"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"অৱস্থানৰ এক্সেছ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"এপ্‌ আৰু সেৱাৰ বাবে"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"এপ্‌ আৰু সেৱাৰ বাবে। এই ছেটিংটো অফ হৈ থাকিলে, আপুনি কোনো জৰুৰীকালীন নম্বৰত কল কৰিলে মাইক্ৰ’ফ’নৰ ডেটা তথাপি শ্বেয়াৰ কৰা হ’ব পাৰে।"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"গে’ম ছেটিং"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"গে’ম ডেশ্বব’ৰ্ডৰ শ্বৰ্টকাট আৰু বহুতো সুবিধা অন কৰক"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"পূৰ্বৱৰ্তী"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"পৰৱৰ্তী"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"ৰঙৰ পূৰ্বদৰ্শন"</string>
