--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"وضعیت امنیتی"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"قفل صفحه، «دستگاهم را پیدا کن»، امنیت برنامه"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"امنیت و حریم‌خصوصی"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"اجازه‌ها، قفل صفحه، امنیت برنامه"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"چهره افزوده شد"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"برای راه‌اندازی چهره، ضربه بزنید"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"قفل‌گشایی با چهره"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" گزینه قفل صفحه غیرفعال است. با سرپرست دستگاه تماس بگیرید تا بیشتر بدانید. "<annotation id="admin_details">"جزئیات بیشتر"</annotation>\n\n"برای تأیید خریدها و دسترسی به برنامه، همچنان می‌توانید از اثر انگشتتان استفاده کنید. "<annotation id="url">" بیشتر بدانید"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"انگشت را بلند کنید، سپس دوباره حسگر را لمس کنید"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"امکان استفاده از حسگر اثر انگشت وجود ندارد. به ارائه‌دهنده خدمات تعمیر مراجعه کنید"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"تنظیمات پیشرفته"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"‏قفل نمایه کاری، Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"‏Smart Lock و موارد دیگر"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"تنظیمات پیشرفته"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"می‌توانید حداکثر <xliff:g id="COUNT">%d</xliff:g> اثرانگشت اضافه کنید"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"حداکثر تعداد اثرانگشت را اضافه کرده‌اید"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"نمی‌توانید اثرانگشت‌های بیشتری اضافه کنید"</string>
@@ -2526,7 +2531,7 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"میان‌برهای دسترس‌پذیری"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"نمایش در تنظیمات سریع"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"قرمز-سبز"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"سرخ-سبز"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"قرمز-سبز"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"آبی-زرد"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"سیاه‌وسفید"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"ضعف در دیدن رنگ سبز، سبزدشواربینی"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"حذف"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"همه برنامه‌ها و داده‌های این جلسه حذف خواهد شد."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"حذف"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"روشن کردن تماس‌های تلفنی"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"روشن کردن تماس‌های تلفنی و پیامک"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"حذف کاربر"</string>
@@ -4955,7 +4974,7 @@
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"برای کنش‌های زیر تند به پایین بکشید"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"استفاده از میان‌بر برای"</string>
     <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"نیمه بالایی صفحه را به‌طرف پایین بکشید تا جایی‌که دسترسی به آن با یک دست راحت‌تر شود"</string>
-    <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"نحوه استفاده از حالت تک حرکت"</b>\n" • مطمئن شوید پیمایش اشاره‌ای در تنظیمات پیمایش سیستم انتخاب شده باشد\n • از نزدیک لبه پایینی صفحه‌نمایش تند به‌پایین بکشید"</string>
+    <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"نحوه استفاده از حالت یک‌دستی"</b>\n" • مطمئن شوید پیمایش اشاره‌ای در تنظیمات پیمایش سیستم انتخاب شده باشد\n • از نزدیک لبه پایینی صفحه‌نمایش تند به‌پایین بکشید"</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"صفحه را به قسمت دردسترس بکشید"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"بالای صفحه دردسترس انگشت شستتان قرار خواهد گرفت."</string>
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"نمایش اعلان‌ها"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"دسترسی به مکان"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"برای برنامه‌ها و سرویس‌ها"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"برای برنامه‌ها و سرویس‌ها. اگر این تنظیم خاموش باشد، ممکن است وقتی با شماره تلفنی اضطراری تماس می‌گیرید داده‌های میکروفون همچنان هم‌رسانی شود."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"تنظیمات بازی"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"روشن کردن میان‌بر «داشبورد بازی‌ها» و موارد دیگر"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"قبلی"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"بعدی"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"پیش‌دید رنگ"</string>
