--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Suojaustila"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Näytön lukitus, Paikanna laite, sovellusten tietoturva"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Tietoturva ja yksityisyys"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Luvat, näytön lukitus, sovellusten tietoturva"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Kasvot lisätty"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Ota kasvot käyttöön napauttamalla"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Kasvojentunnistusavaus"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Näytön lukitustapa on poistettu käytöstä. Kysy lisätietoja organisaatiosi järjestelmänvalvojalta. "<annotation id="admin_details">"Katso lisätietoja"</annotation>\n\n"Voit yhä valtuuttaa ostoksia ja käyttää sovelluksia sormenjälkesi avulla. "<annotation id="url">"Lisätietoja"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Nosta sormesi ja kosketa tunnistinta uudelleen"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Sormenjälkitunnistinta ei voi käyttää. Ota yhteys korjauspalveluun"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Lisäasetukset"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Työprofiilin lukitus, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock ja muita"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Lisäasetukset"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Voit lisätä korkeintaan <xliff:g id="COUNT">%d</xliff:g> sormenjälkeä"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Et voi lisätä useampia sormenjälkiä."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Enempää sormenjälkiä ei voi lisätä."</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"Poista"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Kaikki sovellukset ja tämän istunnon tiedot poistetaan."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Poista"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"Ota puhelut käyttöön"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Ota puhelut ja tekstiviestit käyttöön"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"Poista käyttäjä"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Pääsy sijaintiin"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Sovellukset ja palvelut"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Sovellukset ja palvelut. Vaikka asetus olisi poissa päältä, mikrofonidataa saatetaan silti jakaa, kun soitat hätänumeroon."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Peliasetukset"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Laita päälle esim. Pelipaneelin pikakuvake"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Edellinen"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Seuraava"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Värin esikatselu"</string>
