--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"સુરક્ષાની સ્થિતિ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"સ્ક્રીન લૉક, Find My Device, ઍપ સુરક્ષા"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"સુરક્ષા અને પ્રાઇવસી"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"પરવાનગીઓ, સ્ક્રીન લૉક, ઍપની સુરક્ષા"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ચહેરો ઉમેર્યો"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ફેસ અનલૉક સુવિધાનું સેટઅપ કરવા ટૅપ કરો"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ફેસ અનલૉક"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" સ્ક્રીન લૉક વિકલ્પ અક્ષમ કરેલ છે. વધુ જાણવા માટે, તમારી સંસ્થાના વ્યવસ્થાપકનો સંપર્ક કરો. "<annotation id="admin_details">"વધુ વિગતો"</annotation>\n\n"તમે ખરીદીઓ અને ઍપ્લિકેશનની ઍક્સેસ અધિકૃત કરવા માટે હજુ પણ તમારી ફિંગરપ્રિન્ટનો ઉપયોગ કરી શકો છો. "<annotation id="url">"વધુ જાણો"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"આંગળીને ઉંચકો, પછી ફરીથી સેન્સરને સ્પર્શ કરો"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ફિંગરપ્રિન્ટ સેન્સરનો ઉપયોગ કરી શકાતો નથી. રિપેર કરવાની સેવા આપતા પ્રદાતાની મુલાકાત લો"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"વિગતવાર સેટિંગ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ઑફિસની પ્રોફાઇલનું લૉક, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock અને બીજું ઘણું બધું"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"વિગતવાર સેટિંગ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"તમે <xliff:g id="COUNT">%d</xliff:g> જેટલી ફિંગરપ્રિન્ટ્સ ઉમેરી શકો છો"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"તમે મહત્તમ ફિંગરપ્રિન્ટ્સ ઉમેર્યા છે"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"વધુ ફિંગરપ્રિન્ટ્સ ઉમેરી શકતાં નથી"</string>
@@ -1451,7 +1456,7 @@
     <string name="doze_always_on_title" msgid="7326245192352868477">"સમય અને માહિતી હંમેશાં બતાવો"</string>
     <string name="doze_always_on_summary" msgid="509097829739647852">"વધારેલો બૅટરી વપરાશ"</string>
     <string name="force_bold_text" msgid="4620929631102086716">"બોલ્ડ ટેક્સ્ટ"</string>
-    <string name="title_font_size" msgid="570613010306330622">"ફોન્ટનું કદ"</string>
+    <string name="title_font_size" msgid="570613010306330622">"ફૉન્ટનું કદ"</string>
     <string name="short_summary_font_size" msgid="8444689613442419978">"ટેક્સ્ટને મોટી અથવા નાની કરો"</string>
     <string name="sim_lock_settings" msgid="4493069398250139205">"સિમ કાર્ડ લૉક સેટિંગ"</string>
     <string name="sim_lock_settings_category" msgid="4280307997492851625">"સિમ કાર્ડ લૉક"</string>
@@ -2053,7 +2058,7 @@
     <string name="controls_label" msgid="8671492254263626383">"નિયંત્રણો"</string>
     <string name="force_stop" msgid="2681771622136916280">"ફરજિયાત બંધ કરો"</string>
     <string name="total_size_label" msgid="2052185048749658866">"કુલ"</string>
-    <string name="application_size_label" msgid="6407051020651716729">"ઍપ્લિકેશનનું કદ"</string>
+    <string name="application_size_label" msgid="6407051020651716729">"ઍપનું કદ"</string>
     <string name="external_code_size_label" msgid="7375146402660973743">"USB સ્ટોરેજ ઍપ્લિકેશન"</string>
     <string name="data_size_label" msgid="7814478940141255234">"વપરાશકર્તા ડેટા"</string>
     <string name="external_data_size_label" product="nosdcard" msgid="1054860423004751290">"USB સ્ટોરેજ ડેટા"</string>
@@ -2159,7 +2164,7 @@
     <string name="running_processes_header_title" msgid="558961782589967366">"ઉપકરણ મેમરી"</string>
     <string name="running_processes_header_footer" msgid="2726092156680487584">"ઍપ્લિકેશન RAM વપરાશ"</string>
     <string name="running_processes_header_system_prefix" msgid="8819527769608555124">"સિસ્ટમ"</string>
-    <string name="running_processes_header_apps_prefix" msgid="4151874328324238133">"ઍપ્લિકેશનો"</string>
+    <string name="running_processes_header_apps_prefix" msgid="4151874328324238133">"ઍપ"</string>
     <string name="running_processes_header_free_prefix" msgid="4271100378295864738">"મફત"</string>
     <string name="running_processes_header_used_prefix" msgid="5205762402234243007">"વપરાયેલ"</string>
     <string name="running_processes_header_cached_prefix" msgid="839132595831993521">"કેશ્ડ"</string>
@@ -2187,7 +2192,7 @@
     <string name="language_settings" msgid="8700174277543875046">"ભાષા અને ઇનપુટ"</string>
     <string name="language_empty_list_user_restricted" msgid="8050367405839231863">"તમારી પાસે ઉપકરણની ભાષા બદલવાની પરવાનગી નથી."</string>
     <string name="language_keyboard_settings_title" msgid="7934844313233544557">"ભાષા અને ઇનપુટ"</string>
-    <string name="input_assistance" msgid="3437568284144952104">"સાધનો"</string>
+    <string name="input_assistance" msgid="3437568284144952104">"ટૂલ"</string>
     <string name="keyboard_settings_category" msgid="5392847229300117064">"કીબોર્ડ અને ઇનપુટ પદ્ધતિઓ"</string>
     <string name="phone_language" msgid="5986939176239963826">"ભાષાઓ"</string>
     <string name="phone_language_summary" msgid="863041222809685325"></string>
@@ -2280,7 +2285,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"ઍક્સેસિબિલિટી સેટિંગ"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"ડિસ્પ્લે, ક્રિયાપ્રતિક્રિયા, ઑડિયો"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"વિઝન સેટિંગ"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"તમે તમારી જરૂરતોના મુજબ આ ડિવાઇસને કસ્ટમાઇઝ કરી શકો છો. સેટિંગમાં આ ઍક્સેસિબિલિટી સુવિધાઓ પછીથી બદલી શકાય છે."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"તમે તમારી જરૂરિયાતો મુજબ આ ડિવાઇસને કસ્ટમાઇઝ કરી શકો છો. સેટિંગમાં આ ઍક્સેસિબિલિટી સુવિધાઓ પછીથી બદલી શકાય છે."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"ફૉન્ટનું કદ બદલો"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"સ્ક્રીન રીડર"</string>
     <string name="captions_category_title" msgid="574490148949400274">"કૅપ્શન"</string>
@@ -2330,7 +2335,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"શૉર્ટકટ વડે વિસ્તૃત કરો"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"શૉર્ટકટ વડે વિસ્તૃત કરો અને ત્રણ વાર ટૅપ કરો"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> વિશે"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"કદ અને ટેક્સ્ટ બતાવો"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ડિસ્પ્લેનું કદ અને ટેક્સ્ટ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ટેક્સ્ટને બતાવવાની રીત બદલો"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"વિષય: હોટ-એર બલૂનની ડિઝાઇન"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"મોકલનાર: બિલ"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"ડિલીટ કરો"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"આ સત્રમાંની તમામ ઍપ અને ડેટા કાઢી નાખવામાં આવશે."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"કાઢી નાખો"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"ફોન કૉલ ચાલુ કરો"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"ફોન કૉલ અને SMS ચાલુ કરો"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"વપરાશકર્તાને ડિલીટ કરો"</string>
@@ -3591,7 +3610,7 @@
     <string name="keywords_time_format" msgid="5384803098766166820">"24-કલાકના ફૉર્મેટનો ઉપયોગ કરો"</string>
     <string name="keywords_storage_files" msgid="4509695858659705198">"ડાઉનલોડ કરો"</string>
     <string name="keywords_app_default" msgid="8977706259156428770">"આના વડે ખોલો"</string>
-    <string name="keywords_applications_settings" msgid="999926810912037792">"ઍપ્લિકેશનો"</string>
+    <string name="keywords_applications_settings" msgid="999926810912037792">"ઍપ"</string>
     <string name="keywords_time_zone" msgid="6402919157244589055">"સમયઝોન"</string>
     <string name="keywords_draw_overlay" msgid="3170036145197260392">"ચૅટ હેડ, સિસ્ટમ, અલર્ટ, વિંડો, સંવાદ, ડિસ્પ્લે, બીજી ઍપની ઉપર, દોરો"</string>
     <string name="keywords_flashlight" msgid="2133079265697578183">"ફ્લેશલાઇટ, લાઇટ, ટોર્ચ"</string>
@@ -3707,7 +3726,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"હંમેશાં વાઇબ્રેટ કરો"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"પહેલા વાઇબ્રેટ પછી ધીમે-ધીમે રિંગ વગાડો"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"અન્ય ધ્વનિઓ"</string>
-    <string name="spatial_audio_title" msgid="6591051622375191603">"સ્થાનિક ઑડિયો"</string>
+    <string name="spatial_audio_title" msgid="6591051622375191603">"સ્પેશલ ઑડિયો"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"ડાયલપૅડ ટોન"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"સ્ક્રીન લૉકિંગનો સાઉન્ડ"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"ચાર્જિંગ સાઉન્ડ અને વાઇબ્રેશન"</string>
@@ -4590,7 +4609,7 @@
     <string name="accessibility_lock_screen_progress" msgid="4597298121698665401">"<xliff:g id="COUNT_1">%2$d</xliff:g> માંથી <xliff:g id="COUNT_0">%1$d</xliff:g> અક્ષરોનો ઉપયોગ કર્યો"</string>
     <string name="draw_overlay" msgid="7902083260500573027">"અન્ય ઍપથી ઉપર બતાવો"</string>
     <string name="system_alert_window_settings" msgid="6458633954424862521">"અન્ય ઍપથી ઉપર બતાવો"</string>
-    <string name="system_alert_window_apps_title" msgid="1537949185175079866">"ઍપ્લિકેશનો"</string>
+    <string name="system_alert_window_apps_title" msgid="1537949185175079866">"ઍપ"</string>
     <string name="system_alert_window_access_title" msgid="3074573819155116817">"અન્ય ઍપથી ઉપર બતાવો"</string>
     <string name="permit_draw_overlay" msgid="4468994037192804075">"અન્ય ઍપની ઉપર ડિસ્પ્લે કરવાની મંજૂરી આપો"</string>
     <string name="allow_overlay_description" msgid="1607235723669496298">"તમે ઉપયોગમાં લઈ રહ્યાં હો તેવી અન્ય ઍપની ટોચ ઉપર આ ઍપને ડિસ્પ્લે થવા દો. આ ઍપ તમે ક્યાં ટૅપ કરો છો અથવા તો સ્ક્રીનના ડિસ્પ્લે પર શું ફેરફાર કરો છો તે જોઈ શકશે."</string>
@@ -4875,7 +4894,7 @@
     <string name="dark_ui_settings_dialog_acknowledge" msgid="250437497729953965">"સમજાઈ ગયું"</string>
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"ઘેરી થીમ અજમાવી જુઓ"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"બૅટરી આવરદા વધારવામાં સહાય કરે છે"</string>
-    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ઝડપી સેટિંગ વિકાસકર્તા ટાઇલ"</string>
+    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ઝડપી સેટિંગ ડેવલપર ટાઇલ"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"adb અધિકરણ સમયસમાપ્તિને બંધ કરો"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"ડિફૉલ્ટ (7 દિવસ) અથવા વપરાશકર્તા દ્વારા કન્ફિગર કરેલા સમય (ઓછામાં ઓછા 1 દિવસ)માં ફરી કનેક્ટ કરવામાં ન આવેલા હોય તેવા સિસ્ટમ માટે અધિકરણને ઑટોમૅટિક રીતે રદ કરવાનું બંધ કરો."</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Winscope ટ્રેસ"</string>
@@ -5173,7 +5192,7 @@
     <string name="zen_suggestion_summary" msgid="1984990920503217">"ધ્યાન કેન્દ્રિત કરવા માટે નોટિફિકેશન થોભાવો"</string>
     <string name="disabled_feature" msgid="7151433782819744211">"સુવિધા ઉપલબ્ધ નથી"</string>
     <string name="disabled_feature_reason_slow_down_phone" msgid="5743569256308510404">"આ સુવિધા બંધ કરવામાં આવી છે કારણ કે તે તમારા ફોનની કામ કરવાની ગતિ ધીમી કરે છે"</string>
-    <string name="show_first_crash_dialog" msgid="1696584857732637389">"હંમેશા ક્રૅશ સંવાદ બતાવો"</string>
+    <string name="show_first_crash_dialog" msgid="1696584857732637389">"હંમેશાં ક્રૅશ સંવાદ બતાવો"</string>
     <string name="show_first_crash_dialog_summary" msgid="4692334286984681111">"જયારે પણ કોઈ ઍપ ક્રૅશ થાય ત્યારે સંવાદ બતાવો"</string>
     <string name="angle_enabled_app" msgid="6044941043384239076">"ANGLE દ્વારા ચાલુ ઍપ્લિકેશન પસંદ કરો"</string>
     <string name="angle_enabled_app_not_set" msgid="4472572224881726067">"કોઈ ANGLE દ્વારા ચાલુ ઍપ્લિકેશન સેટ નથી"</string>
@@ -5653,7 +5672,7 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"\'રિંગ વાગતી અટકાવો\'નો ઉપયોગ કરો"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"વાઇ-ફાઇ હૉટસ્પૉટનો ઉપયોગ કરો"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ઍપ પિનિંગનો ઉપયોગ કરો"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"વિકાસકર્તાના વિકલ્પોનો ઉપયોગ કરો"</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ડેવલપરના વિકલ્પોનો ઉપયોગ કરો"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"પ્રિન્ટ સેવાનો ઉપયોગ કરો"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"એકથી વધુ વપરાશકર્તાઓને મંજૂરી આપો"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"વાયરલેસ ડિબગીંગનો ઉપયોગ કરો"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"સ્થાનનો ઍક્સેસ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ઍપ અને સેવાઓ માટે"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ઍપ અને સેવાઓ માટે. આ સેટિંગ બંધ હોવા છતાં પણ, જ્યારે તમે ઇમર્જન્સી નંબર પર કૉલ કરો ત્યારે કદાચ માઇક્રોફોનનો ડેટા શેર કરવામાં આવી શકે."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"ગેમ સેટિંગ"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"ગેમ ડૅશબોર્ડનો શૉર્ટકટ અને અન્ય સેટિંગ ચાલુ કરો"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"પાછળ"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"આગળ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"રંગનો પ્રીવ્યૂ"</string>
