--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -345,7 +345,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Sigurnosni status"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Zaključavanje zaslona, Pronađi moj uređaj, sigurnost aplikacija"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Sigurnost i privatnost"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Dopuštenja, zaključavanje zaslona, sigurnost aplikacije"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Lice dodano"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Dodirnite za postavljanje lica"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Otključavanje licem"</string>
@@ -592,10 +593,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Opcija zaključavanja zaslona onemogućena je. Da biste saznali više, obratite se administratoru svoje organizacije. "<annotation id="admin_details">"Više pojedinosti"</annotation>\n\n"I dalje možete upotrebljavati otisak prsta za autorizaciju kupnji i pristup aplikacijama. "<annotation id="url">"Saznajte više"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Podignite prst, a zatim ponovo dodirnite senzor"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Senzor otiska prsta ne može se koristiti. Posjetite davatelja usluga popravaka"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Napredne postavke"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Zaključavanje poslovnog profila, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock i ostalo"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Napredne postavke"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Maksimalni broj otisaka prstiju koji se može dodati iznosi <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Dodali ste maksimalan broj otisaka prstiju"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Nije moguće dodati više otisaka prstiju"</string>
@@ -2357,7 +2362,7 @@
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Povećanje pomoću prečaca i trostrukog dodira"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"O usluzi <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Veličina zaslona i tekst"</string>
-    <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Promjena načina prikazivanja teksta"</string>
+    <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Promijenite način prikazivanja teksta"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Predmet: Dizajni balona na vrući zrak"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Šalje: Branko"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Dobro jutro!\n\nSamo želim provjeriti kako napreduju dizajni. Hoće li biti spremni prije nego što počnemo s izradom novih balona?"</string>
@@ -2434,7 +2439,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Prozirno"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Neprozirno"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Tekst s visokim kontrastom"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Promijeni boju teksta u crnu ili bijelu. Maksimizira kontrast s pozadinom."</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Mijenja boju teksta u crnu ili bijelu. Maksimizira kontrast s pozadinom."</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"Autom. ažuriranje uvećanja zaslona"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Ažuriranje uvećanja zaslona pri izmjeni aplikacija"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"Tipka za uklj. prekida poziv"</string>
@@ -3450,6 +3455,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"Izbriši"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Sve aplikacije i podaci u ovoj sesiji bit će izbrisani."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Ukloni"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"Uključivanje telefonskih poziva"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Uključivanje telefonskih poziva i SMS-a"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"Brisanje korisnika"</string>
@@ -5786,8 +5805,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Pristup lokaciji"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Za aplikacije i usluge"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Za aplikacije i usluge. Ako je ta postavka isključena, podaci mikrofona i dalje se mogu dijeliti kad nazovete broj hitne službe."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Postavke igara"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Uključite prečac za nadzornu ploču igre i više toga"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Prethodno"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Dalje"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Pregled boje"</string>
