--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Անվտանգության կարգավիճակը"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Էկրանի կողպում, «Գտնել իմ սարքը» ծառայություն, հավելվածների անվտանգություն"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Անվտանգություն և գաղտնիություն"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Թույլտվություններ, էկրանի կողպում, հավելվածների անվտանգություն"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Դեմքն ավելացվեց"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Հպեք՝ դեմքով ապակողպումը կարգավորելու համար"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Դեմքով ապակողպում"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Էկրանի կողպման ընտրանքն անջատված է: Ավելին իմանալու համար դիմեք ձեր կազմակերպության ադմինիստրատորին: "<annotation id="admin_details">"Մանրամասներ"</annotation>\n\n"Գնումները և հավելվածների օգտագործումը թույլատրելու համար դուք կարող եք օգտագործել մատնահետքը: "<annotation id="url">"Իմանալ ավելին"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Բարձրացրեք մատը, ապա կրկին հպեք սենսորին"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Մատնահետքերի սկաները հնարավոր չէ օգտագործել։ Այցելեք սպասարկման կենտրոն։"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Լրացուցիչ կարգավորումներ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Աշխատանքային պրոֆիլի կողպում, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock և ավելին"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Լրացուցիչ կարգավորումներ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Կարող եք ավելացնել առավելագույնը <xliff:g id="COUNT">%d</xliff:g> մատնահետք"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Դուք ավելացրել եք մատնահետքերի առավելագույն թույլատրելի քանակը"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Հնարավոր չէ ավելացնել այլ մատնահետքեր"</string>
@@ -2330,15 +2335,15 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"Խոշորացում դյուրանցման միջոցով"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Խոշորացնել դյուրանցման կամ եռակի հպելու օգնությամբ"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"«<xliff:g id="SERVICE">%1$s</xliff:g>» ծառայության մասին"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Ցուցադրման չափը և տեքստի կարգավորումներ"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Ցուցադրման չափսը և տեքստը"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Կարգավորեք տեքստի ցուցադրումը"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Թեմա՝ Օդապարիկների ձևավորումներ"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Ումից՝ Բիլ"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Բարի լույս։\n\nՊարզապես ուզում էի իմանալ՝ ինչպես են ընթանում ձևավորման աշխատանքները։ Դրանք պատրաստ կլինե՞ն, նախքան մենք կսկսենք մշակել նոր օդապարիկները։"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Բարի լույս։\n\nԻնչպե՞ս են ընթանում ձևավորման աշխատանքները։ Դրանք ավարտված կլինե՞ն, նախքան կսկսենք մշակել նոր օդապարիկները։"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Զրոյացնել կարգավորումները"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Վերակայե՞լ ցուցադրման չափսը և տեքստի նախընտրանքները"</string>
-    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Ցուցադրման չափսը և տեքստի նախընտրանքները կվերակայվեն, և կվերականգնվեն հեռախոսի սկզբնական կարգավորումները։"</string>
-    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Վերակայել"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Զրոյացնե՞լ ցուցադրման չափսի և տեքստի կարգավորումները"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Կվերականգնվեն ցուցադրման չափսի և տեքստի կարգավորումների սկզբնական կարգավորումները։"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Զրոյացնել"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Որևէ բան պլանավորե՞լ եք հանգստյան օրերի համար։"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Գնում ենք լողափ։ Կմիանա՞ք մեզ։"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Ընտրանքներ"</string>
@@ -2437,7 +2442,7 @@
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Օգտագործել գունաշրջումը"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Գունաշրջման դյուրանցում"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Գունաշրջումը էկրանի բաց գույները դարձնում է մուգ, իսկ մուգ գույները՝ բաց։"</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Նկատի առեք&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Մեդիայի և պատկերների գույները կփոխվեն&lt;/li&gt; &lt;li&gt; Գունաշրջումը գործում է բոլոր հավելվածներում&lt;/li&gt; &lt;li&gt; Մուգ ֆոն ստանալու համար գունաշրջման փոխարեն կարելի է օգտագործել մուգ թեման&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Նկատի առեք&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Կփոխվեն մեդիա բովանդակության և պատկերների գույները&lt;/li&gt; &lt;li&gt; Գունաշրջումը գործում է բոլոր հավելվածներում&lt;/li&gt; &lt;li&gt; Մուգ ֆոն ստանալու համար գունաշրջման փոխարեն կարելի է օգտագործել մուգ թեման&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Ավտոմատ սեղմում (հապաղման ժամանակը)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Ավտոմատ սեղմում (հապաղման ժամանակը)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Իմացեք ավելին ավտոմատ սեղմման հապաղման ժամանակի մասին"</string>
@@ -2538,9 +2543,9 @@
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Հավելյալ խամրեցում"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Ավելի խամրեցնել հեռախոսի էկրանը, քան նվազագույն պայծառության դեպքում"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Ավելի խամրեցնել պլանշետի էկրանը, քան նվազագույն պայծառության դեպքում"</string>
-    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Խամրեցրեք էկրանը՝ ավելի հարմար ընթերցման համար"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; Նվազագույն պայծառության ժամանակ հեռախոսի էկրանը դեռ շատ պայծառ է։t&lt;/li&gt; &lt;li&gt; Դուք օգտագործում եք հեռախոսը մթության մեջ, օրինակ, գիշերը կամ մութ սենյակում՝ քնելուց առաջ։&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Հավելյալ խամրեցումը կարող է օգնել, երբ. &lt;ol&gt; &lt;li&gt; Նվազագույն պայծառության ժամանակ պլանշետի էկրանը դեռ շատ պայծառ է։t&lt;/li&gt; &lt;li&gt; Դուք օգտագործում եք պլանշետը մթության մեջ, օրինակ, գիշերը կամ մութ սենյակում՝ քնելուց առաջ։&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Խամրեցրեք էկրանը՝ ավելի հարմար կարդալու համար"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; հեռախոսի էկրանի համար ընտրված է նվազագույն պայծառություն, բայց միևնույն է՝ շատ պայծառ է,&lt;/li&gt; &lt;li&gt;  հեռախոսն օգտագործում եք մթության մեջ, օրինակ՝ գիշերը կամ մութ սենյակում։&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; պլանշետի էկրանի համար ընտրված է նվազագույն պայծառություն, բայց միևնույն է՝ շատ պայծառ է,&lt;/li&gt; &lt;li&gt; պլանշետն օգտագործում եք մթության մեջ, օրինակ՝ գիշերը կամ մութ սենյակում։&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Ինտենսիվություն"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Ավելի խամրեցված"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Ավելի պայծառ"</string>
@@ -3016,7 +3021,7 @@
     <string name="tts_install_voices_text" msgid="902408506519246362">"Ձայները տեղադրելու համար բացեք <xliff:g id="TTS_APP_NAME">%s</xliff:g> հավելվածը"</string>
     <string name="tts_install_voices_open" msgid="919034855418197668">"Բացել հավելվածը"</string>
     <string name="tts_install_voices_cancel" msgid="5179154684379560628">"Չեղարկել"</string>
-    <string name="tts_reset" msgid="9047681050813970031">"Վերակայել"</string>
+    <string name="tts_reset" msgid="9047681050813970031">"Զրոյացնել"</string>
     <string name="tts_play" msgid="2945513377250757221">"Նվագարկել"</string>
     <string name="vpn_settings_title" msgid="9131315656202257272">"VPN"</string>
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"Անվտանգ չէ"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"Ջնջել"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Այս աշխատաշրջանի բոլոր ծրագրերն ու տվյալները կջնջվեն:"</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Հեռացնել"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"Միացնել հեռախոսազանգերը"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Միացնել զանգերն ու SMS-ները"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"Ջնջել օգտատիրոջը"</string>
@@ -4625,7 +4644,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"Տեսախցիկի բացում դաստակի կրկնակի պտտման միջոցով"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"Տեսախցիկ - սնուցման կոճակի կրկնակի սեղմամբ"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"Տեսախցիկի արագ բացում առանց էկրանը ապակողպելու"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"Ցուցադրման չափը"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"Ցուցադրման չափսը"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"Տարրերի չափի փոփոխում"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"ցուցադրման խտություն, էկրանի մասշտաբ, մասշտաբ, մասշտաբավորում"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"Մեծացրեք կամ փոքրացրեք էկրանին ցուցադրվող տարրերը։ Այս կարգավորումը փոխելուց հետո որոշ հավելվածներ կարող են փոխել իրենց դիրքը էկրանին։"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Տեղադրության տվյալների հասանելիություն"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Հավելվածների և ծառայությունների համար"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Հավելվածների և ծառայությունների համար։ Եթե այս կարգավորումն անջատված է, տվյալները կարող են դեռ փոխանցվել, երբ զանգեք արտակարգ իրավիճակների որևէ հեռախոսահամարի։"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Խաղերի կարգավորումներ"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Խաղային վահանակի դյուրանցման և այլ գործառույթների ակտիվացում"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Հետ"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Առաջ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Գույնի նախադիտում"</string>
