--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"უსაფრთხოების სტატუსი"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ეკრანის დაბლოკვა, ჩემი მოწყობილობის პოვნა, აპების უსაფრთხოება"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"უსაფრთხოება და კონფიდენციალურობა"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ნებართვები, ეკრანის დაბლოკვა, აპის უსაფრთხოება"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"სახე დამატებულია"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"შეეხეთ სახით განბლოკვის დასაყენებლად"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"განბლოკვა სახით"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ეკრანის დაბლოკვის ვარიანტი გათიშულია. დამატებითი ინფორმაციისთვის დაუკავშირდით თქვენი ორგანიზაციის ადმინისტრატორს. "<annotation id="admin_details">"ვრცლად"</annotation>\n\n"შენაძენებისა და აპებზე წვდომის ავტორიზაცია კვლავ შეგიძლიათ თითის ანაბეჭდის მეშვეობით. "<annotation id="url">"შეიტყვეთ მეტი"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"თითი აიღეთ და შემდეგ ხელახლა შეეხეთ სენსორს"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"თითის ანაბეჭდის სენსორის გამოყენება ვერ ხერხდება. ეწვიეთ შეკეთების სერვისის პროვაიდერს"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"გაფართოებული პარამეტრები"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"სამსახურის პროფილის ჩაკეტვა, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock და სხვა"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"გაფართოებული პარამეტრები"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"შეგიძლიათ დაამატოთ მაქსიმუმ <xliff:g id="COUNT">%d</xliff:g> თითის ანაბეჭდი"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"თქვენ უკვე დაამატეთ თითის ანაბეჭდების მაქსიმალური რაოდენობა"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"მეტი თითის ანაბეჭდის დამატება ვერ ხერხდება"</string>
@@ -2330,7 +2335,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"გადიდება მალსახმობით"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"გადიდება მალსახმობითა და სამმაგი შეხებით"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g>-ის შესახებ"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ზომის და ტექსტის ჩვენება"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ეკრანის ზომა და ტექსტი"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ტექსტის გამოსახულების შეცვლა"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"თემა: საჰაერო ბურთის დიზაინი"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"გამგზავნი: ბილი"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"წაშლა"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"ამ სესიის ყველა აპი და მონაცემი წაიშლება."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"ამოშლა"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"სატელეფონო ზარების ჩართვა"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"სატელ. ზარების და SMS-ის ჩართვა"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"მომხმარებლის წაშლა"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"მდებარეობაზე წვდომა"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"აპებისა და სერვისებისთვის"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"აპებისა და სერვისებისთვის. მიკროფონის მონაცემები, შესაძლოა, მაინც გაზიარდეს გადაუდებელი დახმარების სამსახურის ნომერზე დარეკვისას, როცა ეს პარამეტრი გამორთულია."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"თამაშის პარამეტრები"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"ჩართეთ თამაშების დაფის მალსახმობი და სხვა"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"წინა"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"შემდეგი"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"ფერის გადახედვა"</string>
