--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Безбедносен статус"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"„Заклучување екран“, „Најди го мојот уред“, безбедност на апликациите"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Безбедност и приватност"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Дозволи, заклучување екран, безбедност на апликациите"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Додаден е лик"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Допрете за да поставите лик"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Отклучување со лик"</string>
@@ -458,10 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Вие и вашето дете може да ги избришете сликите или моделот на отпечатокот или да го исклучите „Отклучувањето со отпечаток на прст“ во секое време во „Поставки“. Сликите и моделите на отпечатокот се складираат во телефонот додека не се избришат."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Телефонот може да се отклучи кога немате таква намера, како на пример, ако некој го допре до вашиот прст."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Телефонот на вашето дете може да се отклучи кога детето нема намера за тоа, на пример, ако некој го постави телефонот под неговиот прст."</string>
-    <!-- no translation found for security_settings_fingerprint_v2_enroll_introduction_footer_message_6 (5314031490467481499) -->
-    <skip />
-    <!-- no translation found for security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6 (3563942520716110478) -->
-    <skip />
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"За најдобри резултати, користете заштитник на екранот што е сертифициран со „Создадено за Google“. Со другите заштитници на екрани, отпечатоците може да не функционираат."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"За најдобри резултати, користете заштитник на екранот што е сертифициран со „Создадено за Google“. Со другите заштитници на екрани, отпечатоците на вашето дете може да не функционираат."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Менувајте ја положбата на прстот по малку секој пат"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Покријте ја иконата со средината на отпечатокот"</string>
@@ -515,10 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Подигнувајте го прстот за да ги додадете различните делови од отпечатокот"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Допрете и задржете секој пат кога иконата за отпечаток ќе се премести. Ова помага за да се сними повеќе од отпечатокот."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Поставете го врвот на прстот на сензорот"</string>
-    <!-- no translation found for security_settings_udfps_enroll_left_edge_title (1944076382202470458) -->
-    <skip />
-    <!-- no translation found for security_settings_udfps_enroll_right_edge_title (9036744264606447490) -->
-    <skip />
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Поставете го левиот раб од прстот"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Поставете го десниот раб од прстот"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Поставете го отпечатокот странично на сензорот и задржете, а потоа направете исто со другата страна"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Ова помага за да се сними повеќе од отпечатокот"</string>
     <!-- String.format failed for translation -->
@@ -592,10 +589,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Опцијата за заклучување екран е оневозможена. Контактирајте со администраторот на вашата организација за да дознаете повеќе. "<annotation id="admin_details">"Повеќе детали"</annotation>\n\n"Сѐ уште може да го користите отпечатокот за да одобрувате купувања и пристап до апликации. "<annotation id="url">"Дознајте повеќе"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Подигнете го прстот, потоа допрете го сензорот повторно"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Не може да се користи сензорот за отпечатоци. Однесете го на поправка"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Напредни поставки"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Заклучување на работниот профил, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock и друго"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Напредни поставки"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Може да додавате до <xliff:g id="COUNT">%d</xliff:g> отпечатоци"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Додадовте максимален број на отпечатоци"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Не може да се додадат повеќе отпечатоци"</string>
@@ -2419,9 +2420,9 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Ажурирај зголемување екран при премини меѓу аплик."</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"Прекини повик со копче за вклучување"</string>
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"Голем покажувач на глувчето"</string>
-    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"Истакнете го покажувачот на глувчето"</string>
-    <string name="accessibility_disable_animations" msgid="2993529829457179058">"Отстранување анимации"</string>
-    <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"Намалете го движењето на екранот"</string>
+    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"Истакни го покажувачот на глувчето"</string>
+    <string name="accessibility_disable_animations" msgid="2993529829457179058">"Отстрани анимации"</string>
+    <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"Намали го движењето на екранот"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"Моно аудио"</string>
     <string name="accessibility_toggle_primary_mono_summary" msgid="1935283927319407303">"Комбинирај канали кога се пушта аудио"</string>
     <string name="accessibility_toggle_primary_balance_title" msgid="7332275200153366714">"Баланс на аудио"</string>
@@ -2539,7 +2540,7 @@
     <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Слаба црвена, протаномалија"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Тританомалија"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Дополнително затемнување"</string>
-    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додајте дополнително затемнување"</string>
+    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додај дополнително затемнување"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Кратенка за дополнително затемнување"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"За дополнително затемнување"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Затемнете го екранот повеќе од минималната осветленост на телефонот"</string>
@@ -3410,6 +3411,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"Избриши"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Сите апликации и податоци во сесијата ќе се избришат."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Отстрани"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"Вклучи телефонски повици"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Вклучи телефонски повици и SMS"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"Избриши корисник"</string>
@@ -4234,9 +4249,9 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"настани"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Настани"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дозволете апликациите да занемаруваат"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат режимот"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Изберете повеќе апликации"</string>
-    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Нема избрани апликации"</string>
+    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Не се избрани апликации"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Апликациите не може да го прекинуваат"</string>
     <string name="zen_mode_bypassing_apps_add" msgid="5031919618521327102">"Додајте апликации"</string>
     <string name="zen_mode_bypassing_apps_summary_all" msgid="4684544706511555744">"Сите известувања"</string>
@@ -5701,8 +5716,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Пристап до локацијата"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"За апликации и услуги"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"За апликации и услуги. Ако поставкава е исклучена, податоците за микрофонот може сепак да се споделат кога ќе се јавите на број за итни случаи."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Поставки за игри"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Вклучете кратенка за „Контролната табла за игри“ и друго"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Претходна"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Следна"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Преглед на бојата"</string>
