--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ආරක්ෂක තත්ත්වය"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"තිර අගුල, මගේ උපාංගය සොයන්න, යෙදුම් ආරක්ෂාව"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ආරක්ෂාව සහ පෞද්ගලිකත්වය"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"අවසර, තිර අගුල, යෙදුම් ආරක්ෂාව"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"මුහුණ එකතු කරන ලදි"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"මුහුණ පිහිටුවීමට තට්ටු කරන්න"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"මුහුණෙන් අගුළු හැරීම"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" තිර අගුලු විකල්පය අබලයි. තව දැන ගැනීමට ඔබේ සංවිධානයේ පරිපාලක අමතන්න. "<annotation id="admin_details">"තවත් විස්තර"</annotation>\n\n"ඔබට තවමත් මිලදී ගැනීම් සහ යෙදුම් ප්‍රවේශය සඳහා අනුමැතිය දීමට ඔබේ ඇඟිලි සලකුණ භාවිත කළ හැකිය. "<annotation id="url">"තව දැන ගන්න"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ඇඟිල්ල ඔසවා, අනතුරුව නැවත සංවේදකය ස්පර්ශ කරන්න"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ඇඟිලි සලකුණු සංවේදකය භාවිත කළ නොහැකිය. අළුත්වැඩියා සැපයුම්කරුවෙකු බලන්න"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"උසස් සැකසීම්"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"කාර්යාල පැතිකඩ අගුල, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock සහ තවත් දේ"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"උසස් සැකසීම්"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ඔබට ඇඟිලි සලකුණු <xliff:g id="COUNT">%d</xliff:g> දක්වා එකතු කළ හැකිය"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ඔබ ඇඟිලි සලකුණු උපරිම සංඛ්‍යාව එක් කර ඇත"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"තවත් ඇඟිලි සලකුණු එක් කළ නොහැකිය"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"මකන්න"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"මෙම සැසියේ සියළුම යෙදුම් සහ දත්ත මකාවී."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"ඉවත් කරන්න"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"දුරකථන ඇමතුම් ක්‍රියාත්මක කරන්න"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"දුරකථන ඇමතුම් සහ SMS ක්‍රියාත්මක කරන්න?"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"පරිශීලකයා මකන්න"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"ස්ථාන ප්‍රවේශය"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"යෙදුම් සහ සේවා සඳහා"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"යෙදුම් සහ සේවා සඳහා. මෙම සැකසීම ක්‍රියාවිරහිත නම්, ඔබ හදිසි ඇමතුම් අංකයක් අමතන විට මයික්‍රෆෝනයේ දත්ත තවම බෙදා ගත හැකිය."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"ක්‍රීඩා සැකසීම්"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"ක්‍රීඩා උපකරණ පුවරු කෙටි මග සහ තවත් දේ ක්‍රියාත්මක කරන්න"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"පෙර"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"ඊළඟ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"වර්ණ පෙරදසුන"</string>
