--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Hali ya usalama"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Kufunga skrini, Tafuta Kifaa Changu, usalama wa programu"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Usalama na faragha"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Ruhusa, kufunga skrini, usalama wa programu"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Utambuzi wa uso umeongezwa"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Gusa ili uweke mipangilio ya uso"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Kufungua kwa uso"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Chaguo la kufunga skrini limezimwa. Wasiliana na msimamizi wa shirika lako ili upate maelezo zaidi "<annotation id="admin_details">"Pata maelezo zaidi"</annotation>\n\n"Bado unaweza kutumia alama ya kidole chako kuidhinisha ununuzi na kufikia programu. "<annotation id="url">"Pata maelezo zaidi"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Inua kidole, kisha gusa kitambuzi tena"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Imeshindwa kutumia kitambua alama ya kidole. Tembelea mtoa huduma za urekebishaji"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Mipangilio ya kina"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Mbinu ya kufunga wasifu wa kazini, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock na zaidi"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Mipangilio ya kina"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Unaweza kuongeza hadi vitambulisho <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Umeongeza idadi ya juu inayoruhusiwa ya alama za kidole"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Haiwezi kuongeza alama zaidi za kidole"</string>
@@ -2408,7 +2413,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Kupenyeza mwangaza"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Kutopenyeza mwangaza"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Maandishi yenye utofautishaji bora"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Badilisha rangi ya maandishi kuwa nyeusi au nyeupe Ongeza utofautishaji ukitumia mandharinyuma."</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Badilisha rangi ya maandishi kuwa nyeusi au nyeupe. Ongeza utofautishaji ukitumia mandharinyuma."</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"Sasisha otomatiki ukuzaji wa skrini"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Sasisha ukuzaji wa skrini kwenye mipito ya  programu"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"Kata simu kwa kitufe cha kuwasha/kuzima"</string>
@@ -2515,7 +2520,7 @@
     </plurals>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Marekebisho ya sauti"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"Maelezo ya sauti"</string>
-    <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"Sikia maelezo ya kinachotendeka katika skrini kwenye filamu na vipindi vinavyotumika kwenye programu"</string>
+    <string name="accessibility_audio_description_summary" msgid="2554789094873781056">"Sikia maelezo ya kinachotendeka katika skrini kwenye filamu na vipindi ambapo hili linawezekana"</string>
     <string name="keywords_audio_description" msgid="6202816411593281252">"maelezo ya sauti, sauti, maelezo, uwezo mdogo wa kuona,"</string>
     <string name="accessibility_summary_shortcut_enabled" msgid="4030427268146752644">"Kipengele cha njia ya mkato kimewashwa"</string>
     <string name="accessibility_summary_shortcut_disabled" msgid="564005462092499068">"Imezimwa"</string>
@@ -2539,8 +2544,8 @@
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Punguza mwangaza wa skrini zaidi ya kiwango cha chini cha ung\'aavu wa simu yako"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Punguza mwangaza wa skrini zaidi ya kiwango cha chini cha ung\'aavu wa kompyuta yako kibao"</string>
     <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Fanya skrini yako iwe na mwangaza hafifu ili iwe rahisi kusoma"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Kipunguza mwangaza zaidi kinaweza kusaidia wakati: &lt;ol&gt; &lt;li&gt; Uangavu chaguomsingi wa kiwango cha chini kwenye simu yako bado una mwangaza mkubwa&lt;/li&gt; &lt;li&gt; Unatumia simu yako katika hali zenye giza, kama vile usiku au katika chumba chenye giza kabla ya kulala&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Kipunguza mwangaza zaidi kinasaidia wakati: &lt;ol&gt; &lt;li&gt; Uangavu chaguomsingi wa kiwango cha chini kwenye kompyuta kibao yako bado una mwangaza mkubwa&lt;/li&gt; &lt;li&gt; Unatumia kompyuta kibao katika hali zenye giza, kama vile usiku au katika chumba chenye giza kabla ya kulala&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Kipunguza mwangaza zaidi kinaweza kusaidia wakati: &lt;ol&gt; &lt;li&gt; Uangavu chaguomsingi wa kiwango cha chini kwenye simu yako bado una mwangaza mwingi&lt;/li&gt; &lt;li&gt; Unatumia simu yako katika hali zenye giza, kama vile usiku au katika chumba chenye giza kabla ya kulala&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Kipunguza mwangaza zaidi kinasaidia wakati: &lt;ol&gt; &lt;li&gt; Uangavu chaguomsingi wa kiwango cha chini kwenye kompyuta kibao yako bado una mwangaza mwingi&lt;/li&gt; &lt;li&gt; Unatumia kompyuta kibao katika hali zenye giza, kama vile usiku au katika chumba chenye giza kabla ya kulala&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Ukolezaji"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Punguza ung\'aavu"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Ung\'aavu zaidi"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"Futa"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"Data na programu zote katika kipindi hiki zitafutwa."</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"Ondoa"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"Ruhusu upigaji simu"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Washa kipengele cha SMS na kupiga simu"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"Futa mtumiaji"</string>
@@ -5652,7 +5671,7 @@
     <string name="dark_theme_main_switch_title" msgid="4045147031947562280">"Tumia Mandhari meusi"</string>
     <string name="bluetooth_main_switch_title" msgid="8409835540311309632">"Tumia Bluetooth"</string>
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"Tumia kipengele cha kuzuia mlio"</string>
-    <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"Tumia mtandao pepe wa Wi-Fi"</string>
+    <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"Tumia mtandaopepe wa Wi-Fi"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Tumia kipengele cha kubandika programu"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Tumia chaguo za wasanidi programu"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Tumia huduma ya kuchapisha"</string>
@@ -5696,8 +5715,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Uwezo wa kufikia mahali"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Kwa ajili ya programu na huduma"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Kwenye programu na huduma. Mipangilio hii ikizimwa, huenda bado data ya maikrofoni ikashirikiwa unapopigia nambari ya dharura."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Mipangilio ya michezo"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Washa Njia ya mkato ya Dashibodi ya michezo na zaidi"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Uliotangulia"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Unaofuata"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Onyesho la kukagua rangi"</string>
