--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"سیکیورٹی کی صورتحال"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"اسکرین لاک، \'میرا آلہ ڈھونڈیں\'، ایپ کی سیکیورٹی"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"سیکیورٹی اور رازداری"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"اجازتیں، اسکرین لاک، ایپ سیکیورٹی"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"چہرہ شامل کر دیا گیا"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"فیس سیٹ اپ کرنے کے لیے تھپتھپائیں"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"فیس اَنلاک"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" اسکرین لاک اختیار غیر فعال ہے۔ مزید جاننے کیلئے اپنی تنظیم کے منتظم سے رابطہ کریں۔ "<annotation id="admin_details">"مزید تفصیلات"</annotation>\n\n"آپ پھر بھی خریداریوں کی اجازت دینے کیلئے اور ایپ کی رسائی کیلئے اپنا فنگر پرنٹ استعمال کر سکتے ہیں۔ "<annotation id="url">"مزید جانیں"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"انگلی اٹھائیں اور سنسر کو دوبارہ ٹچ کریں"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"فنگر پرنٹ سینسر کا استعمال نہیں کر سکتے۔ ایک مرمت فراہم کنندہ کو ملاحظہ کریں"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"جدید ترین ترتیبات"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"‏دفتری پروفائل کا قفل، Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"‏Smart Lock اور مزید"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"جدید ترین ترتیبات"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"آپ <xliff:g id="COUNT">%d</xliff:g> تک فنگر پرنٹس کا اضافہ کر سکتے ہیں"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"آپ فنگر پرنٹس کی زیادہ سے زیادہ تعداد شامل کر چکے ہیں"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"مزید فنگر پرنٹس شامل نہیں کر سکتے"</string>
@@ -2333,7 +2338,7 @@
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ڈسپلے کا سائز اور ٹیکسٹ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ٹیکسٹ کے ڈسپلے کرنے کا طریقہ تبدیل کریں"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"موضوع: گرم ہوا کے غباروں کے ڈیزائنز"</string>
-    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"فارم: بل"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"منجانب: بِل"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صبح بخیر!\n\nمیں صرف یہ دیکھنا چاہتا تھا کہ کیسے ڈیزائنز تیار ہو رہے ہیں۔ کیا وہ ہمارے نئے غبارے بنانا شروع کرنے سے پہلے تیار ہو جائیں گے؟"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ترتیبات کو ری سیٹ کریں"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ڈسپلے کا سائز اور ٹیکسٹ کو ری سیٹ کریں؟"</string>
@@ -3404,6 +3409,20 @@
     <string name="user_delete_button" msgid="3833498650182594653">"حذف کریں"</string>
     <string name="user_exit_guest_confirm_message" msgid="8995296853928816554">"اس سیشن میں موجود سبھی ایپس اور ڈیٹا کو حذف کر دیا جائے گا۔"</string>
     <string name="user_exit_guest_dialog_remove" msgid="7067727314172605181">"ہٹائیں"</string>
+    <!-- no translation found for guest_category_title (5562663588315329152) -->
+    <skip />
+    <!-- no translation found for user_category_title (4368580529662699083) -->
+    <skip />
+    <!-- no translation found for other_user_category_title (7089976887307643217) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit (8202972371459611066) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_summary (3969962695703280353) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_title (2310442892536079416) -->
+    <skip />
+    <!-- no translation found for remove_guest_on_exit_dialog_message (8112409834021851883) -->
+    <skip />
     <string name="user_enable_calling" msgid="264875360626905535">"فون کالز آن کریں"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"‏فون کالز اور SMS آن کریں"</string>
     <string name="user_remove_user" msgid="8468203789739693845">"صارف کو حذف کریں"</string>
@@ -5695,8 +5714,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"مقام تک رسائی"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ایپس اور سروسز کے لیے"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ایپس اور سروسز کے لیے۔ اگر یہ ترتیب آف ہو تو آپ کے ایمرجنسی نمبر پر کال کرتے وقت بھی مائیکروفون کے ڈیٹا کا اشتراک کیا جا سکتا ہے۔"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"گیم کی ترتیبات"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"گیم ڈیش بورڈ شارٹ کٹ اور مزید آن کریں"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"پچھلا"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"اگلا"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"رنگ کا پیش منظر"</string>
